button sizes, nav alignment fixed

--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ a {
 body {
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(../src//assets/images/hero-bg.jpg);
-  font-family: var(--primary2-fs);
+  /* font-family: var(--primary2-fs); */
   min-height: 1080px;
   height: 100vh;
   width: 100vw;
@@ -37,8 +37,8 @@ h5,
 h6,
 nav {
   letter-spacing: var(--spacing);
-  line-height: 1.25;
-  margin-bottom: 0.75rem;
+  /* line-height: 1.25; */
+  /* margin-bottom: 0.75rem; */
   font-family: var(--primary1-fs) !important;
 }
 
